@@ -1,8 +1,8 @@
 Package: CRSPutils
 Type: Package
 Title: Utilities for Working with CRSP Data Files
-Version: 0.0-1
-Date: 2018-08-08
+Version: 0.1-0
+Date: 2021-05-21
 Authors@R: person("Enrico", "Schumann",
                   role  = c("aut", "cre"),
                   email = "es@enricoschumann.net",
